
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






union bpf_attr {int map_fd; int flags; int value; int key; } ;
typedef int uint64_t ;
typedef int uint32_t ;


 int BPF_ANY ;
 int BPF_MAP_LOOKUP_ELEM ;
 int bpf_ (int ,union bpf_attr*) ;
 int err (int,char*) ;

uint64_t array_get_dw(int mapfd, uint32_t key) {
  uint64_t value = 0;
  union bpf_attr attr = {
    .map_fd = mapfd,
    .key = (uint64_t)&key,
    .value = (uint64_t)&value,
    .flags = BPF_ANY,
  };
  int res = bpf_(BPF_MAP_LOOKUP_ELEM, &attr);
  if (res)
    err(1, "map lookup elem");
  return value;
}
