; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_45557.c_array_get_dw.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_45557.c_array_get_dw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.bpf_attr = type { i32 }

@BPF_ANY = common dso_local global i32 0, align 4
@BPF_MAP_LOOKUP_ELEM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"map lookup elem\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @array_get_dw(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %union.bpf_attr, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  %8 = bitcast %union.bpf_attr* %6 to i32*
  %9 = load i32, i32* @BPF_ANY, align 4
  store i32 %9, i32* %8, align 4
  %10 = load i32, i32* @BPF_MAP_LOOKUP_ELEM, align 4
  %11 = call i32 @bpf_(i32 %10, %union.bpf_attr* %6)
  store i32 %11, i32* %7, align 4
  %12 = load i32, i32* %7, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %2
  %15 = call i32 @err(i32 1, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  br label %16

16:                                               ; preds = %14, %2
  %17 = load i32, i32* %5, align 4
  ret i32 %17
}

declare dso_local i32 @bpf_(i32, %union.bpf_attr*) #1

declare dso_local i32 @err(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
